# trip-scheduler

./: .env.example  .eslintrc-auto-import.json  .gitignore  LICENSE  README.md  deploy.sh  docker-compose.yml  eslint.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  readme.md  rsbuild.config.ts  src_prompt.md  tsconfig.json  tsconfig.node.json  vite.config.ts  workspace.code-workspace
apps/client/: .dockerignore  .env.example  .eslintrc-auto-import.json  .gitignore  Dockerfile  capacitor.config.ts  electron-builder.yml  eslint.config.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  prompt-gen.config.json  pwa-assets.config.ts  readme.md  tsconfig.json  tsconfig.node.json
apps/client/src-tauri/: Cargo.toml
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: cli.rs  lib.rs  main.rs
apps/scraper/: .env.example  .gitignore  eslint.config.ts  package.json  prompt-gen.config.json  tsconfig.json  tsup.config.ts
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  drizzle.config.ts  eslint.config.ts  package.json  prompt-gen.config.json  readme.md  tsconfig.json  tsup.config.ts
deployment/: .env.example  deploy.sh  docker-compose.yml
deployment/client/: Dockerfile  nginx.conf
deployment/server/: Dockerfile
docker/: Dockerfile.client  Dockerfile.server  build_client.sh  build_server.sh  deploy.sh  docker-compose.yml  prometheus.yml  readme.md  run_client.sh  run_server.sh
docker/client/: Dockerfile
src/: App.vue  app.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: mock.rs
(+1188 files in other folders)
