[package]
name = "trip_scheduler"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"
default-run = "trip_scheduler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trip_scheduler_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[[bin]]
name = "cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { features = ["sqlite"], version = "2" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
clap = { version = "4.5.10", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
